--- a/q/58243.html
+++ b/q/58243.html
@@ -26,14 +26,14 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>088</td><td>sed 4.2.2 r</td><td>240415T143030Z</td><td><a href="https://codegolf.stackexchange.com/questions/58243/16-bit-binary-grid/272600#272600">guest430</a></td></tr>
-<tr d-ix="1"><td>183</td><td>Go</td><td>240416T150133Z</td><td><a href="https://codegolf.stackexchange.com/questions/58243/16-bit-binary-grid/272622#272622">bigyihsu</a></td></tr>
-<tr d-ix="2"><td>220</td><td>Scala 3</td><td>240503T083259Z</td><td><a href="https://codegolf.stackexchange.com/questions/58243/16-bit-binary-grid/272932#272932">138 Aspe</a></td></tr>
-<tr d-ix="3"><td>045</td><td>Uiua</td><td>240415T204638Z</td><td><a href="https://codegolf.stackexchange.com/questions/58243/16-bit-binary-grid/272611#272611">noodle p</a></td></tr>
-<tr d-ix="4"><td>115</td><td>Python 3</td><td>240417T100324Z</td><td><a href="https://codegolf.stackexchange.com/questions/58243/16-bit-binary-grid/272639#272639">cnln</a></td></tr>
-<tr d-ix="5"><td>031</td><td>05AB1E</td><td>240417T131316Z</td><td><a href="https://codegolf.stackexchange.com/questions/58243/16-bit-binary-grid/272641#272641">Kevin Cr</a></td></tr>
-<tr d-ix="6"><td>082</td><td>JavaScript Node.js</td><td>240416T012451Z</td><td><a href="https://codegolf.stackexchange.com/questions/58243/16-bit-binary-grid/272613#272613">Justin M</a></td></tr>
-<tr d-ix="7"><td>031</td><td>Vyxal</td><td>221008T234801Z</td><td><a href="https://codegolf.stackexchange.com/questions/58243/16-bit-binary-grid/252864#252864">emanresu</a></td></tr>
+<tr d-ix="0"><td>030</td><td>Vyxal</td><td>221008T234801Z</td><td><a href="https://codegolf.stackexchange.com/questions/58243/16-bit-binary-grid/252864#252864">emanresu</a></td></tr>
+<tr d-ix="1"><td>088</td><td>sed 4.2.2 r</td><td>240415T143030Z</td><td><a href="https://codegolf.stackexchange.com/questions/58243/16-bit-binary-grid/272600#272600">guest430</a></td></tr>
+<tr d-ix="2"><td>183</td><td>Go</td><td>240416T150133Z</td><td><a href="https://codegolf.stackexchange.com/questions/58243/16-bit-binary-grid/272622#272622">bigyihsu</a></td></tr>
+<tr d-ix="3"><td>220</td><td>Scala 3</td><td>240503T083259Z</td><td><a href="https://codegolf.stackexchange.com/questions/58243/16-bit-binary-grid/272932#272932">138 Aspe</a></td></tr>
+<tr d-ix="4"><td>045</td><td>Uiua</td><td>240415T204638Z</td><td><a href="https://codegolf.stackexchange.com/questions/58243/16-bit-binary-grid/272611#272611">noodle p</a></td></tr>
+<tr d-ix="5"><td>115</td><td>Python 3</td><td>240417T100324Z</td><td><a href="https://codegolf.stackexchange.com/questions/58243/16-bit-binary-grid/272639#272639">cnln</a></td></tr>
+<tr d-ix="6"><td>031</td><td>05AB1E</td><td>240417T131316Z</td><td><a href="https://codegolf.stackexchange.com/questions/58243/16-bit-binary-grid/272641#272641">Kevin Cr</a></td></tr>
+<tr d-ix="7"><td>082</td><td>JavaScript Node.js</td><td>240416T012451Z</td><td><a href="https://codegolf.stackexchange.com/questions/58243/16-bit-binary-grid/272613#272613">Justin M</a></td></tr>
 <tr d-ix="8"><td>036</td><td>Japt R</td><td>210614T104924Z</td><td><a href="https://codegolf.stackexchange.com/questions/58243/16-bit-binary-grid/229639#229639">Shaggy</a></td></tr>
 <tr d-ix="9"><td>047</td><td>Vyxal j</td><td>210614T061454Z</td><td><a href="https://codegolf.stackexchange.com/questions/58243/16-bit-binary-grid/229623#229623">emanresu</a></td></tr>
 <tr d-ix="10"><td>080</td><td>x8616 machine code</td><td>200831T173119Z</td><td><a href="https://codegolf.stackexchange.com/questions/58243/16-bit-binary-grid/210409#210409">640KB</a></td></tr>
@@ -66,7 +66,26 @@
 <tr d-ix="37"><td>026</td><td>J</td><td>150918T164925Z</td><td><a href="https://codegolf.stackexchange.com/questions/58243/16-bit-binary-grid/58246#58246">lynn</a></td></tr>
 <tr d-ix="38"><td>143</td><td>Julia</td><td>150918T181109Z</td><td><a href="https://codegolf.stackexchange.com/questions/58243/16-bit-binary-grid/58251#58251">Alex A.</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-r</code>, <s>109</s> <s>108</s> <s>107</s> <s>105</s> <s>104</s> 88 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, <s>31</s> 30 bytes</h1>
+<pre><code>\+3-4*5ε\|?b16∆Z\#*2↳ʁ+4ẇṠYvǏ⁋
+</code></pre>
+<p><a href="https://vyxal.pythonanywhere.com/#WyIiLCIiLCJcXCszLTQqNc61XFx8P2IxNuKIhlpcXCMqMuKGs8qBKzThuofhuaBZdseP4oGLIiwiIiwiNDI0MiJd" rel="nofollow noreferrer">Try it Online!</a></p>
+<pre><code>          ?                    # Input
+           b                   # To binary
+            16∆Z               # Pad to length 16 with 0s
+                \#*            # That many #s, for each bit
+                   2↳ʁ         # Pad to length 2 with spaces and mirror
+        \|            +        # Prepend | to each
+                       4ẇṠ     # Divide into rows and stringify each
+                          Y    # Interleave with...
+      5ε                       # Five copies of
+\+3-                           # &quot;+---&quot;
+    4*                         # Repeated four times
+                           vǏ  # For each line, append the first character
+                             ⁋ # Join the result by newlines
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-r</code>, <s>109</s> <s>108</s> <s>107</s> <s>105</s> <s>104</s> 88 bytes</h1>
 <p>-1 byte thanks to noodle man</p>
 <pre><code>s/.*/dc&lt;&lt;&lt;4dvo8^&amp;+p/e       # change from base 10 to base 2, plus 65536
 y/01/ #/                    # change from '0,1' to ' ,#' everywhere
@@ -78,7 +97,7 @@ s/^/+---+---+---+---+\n/gm  # put border rows around the lines
 <p><a href="https://tio.run/##K05N@f@/WF9PSz8l2cbGxiSlLN8iTk27QD@Vq1LfwFBfQVmfCyitDyL1axTUFPTTQfxqQ7NafbWamDwwN05fW1dXFwWDZHL//zc2tjAy5bK0tOQy4DIzNTU2/ZdfUJKZn1f8X7cIAA" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
 <p>someone brought me back here with an upvote and I found a much better strategy. now this answer also builds the answer up entirely in PATTERN space and outputs normally at the end, and there's no extra byte from using a <code>&amp;nbsp;</code> in the <code>y</code> statement.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, <s>187</s> 183 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, <s>187</s> 183 bytes</h1>
 <pre class="lang-go prettyprint-override"><code>func(n uint16)(s string){H,N:=&quot;+---+---+---+---+&quot;,`
 `
 s+=H
@@ -94,7 +113,7 @@ return}
 <li>-4 bytes by Go 1.22+ range-over-int.</li>
 </ul>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.scala-lang.org/" rel="nofollow noreferrer">Scala 3</a>, 220 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.scala-lang.org/" rel="nofollow noreferrer">Scala 3</a>, 220 bytes</h1>
 <p>220 bytes, it can be golfed more.</p>
 <hr />
 <p>Ungolfed version. <a href="https://ato.pxeger.com/run?1=TU-7TsNAEOzzFaulyB2OrYADimzOEnQUVEAVpTjbZ-vAvrPOl6DI-EtoQgENXxSJj8GPRKLZ0c7Mzu5-fNcJL7j_s0JX6TduFK4PXMcvIrHwwKWCZgKQigzKriHc5HUAt8bw3erRGqnyNQ3gWUkLbHACZMT3l5dXtGvayaSntryALCD3yrKot1JgXxubucvDr2JR08sxU57Vd1JxsxtzPSO2wtTCq3j6pMnF9Ww6n9ITG_ZDJYu93OhNJVKyoN38cNcgFQwddAi6ruvg-YKGmTZE3rhzsBp82lTdClsoUtDBbljplbwiCYtkRhIiadRvwzMURS0QkHrl63gXwXfAGcKxIg1PWYa24b_cdvzx84j7_Yh_" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -121,7 +140,7 @@ return}
 }
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1>Uiua, <s>48</s> <s>46</s> 45 bytes</h1>
+<div id="pu4" class="pu"><h1>Uiua, <s>48</s> <s>46</s> 45 bytes</h1>
 <pre><code>⊏:&quot;+-| #&quot;⍜♭(⇌⍜▽◌=4.)↘1▽5⊟+2↧⇌.⟜±◿4⇡17+3⋯+ⁿ8 4
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_11_0-dev_1__RiDihpAg4oqPOiIrLXwgIyLijZzima0o4oeM4o2c4pa94peMPTQuKeKGmDHilr014oqfKzLihqfih4wu4p-cwrHil7804oehMTcrM-KLryvigb84IDQK4omhJnAgRiA0MjQyCiZwICJcbiIK4omhJnAgRiAzMzgyNQo=" rel="nofollow noreferrer">Try it!</a></p>
@@ -158,7 +177,7 @@ return}
 <p>Take the binary representation of the input, padded to 16 bits by adding <code>ⁿ8 4</code> (4^8 is a byte shorter than 2^16). Add three to each digit, leaving 3 where there'd been zeros and 4 where there'd been ones. Then replace each four in the above matrix with a number from this list.</p>
 <p>Finally, index each item into a string so that 0 becomes <code>+</code>, 1 becomes <code>-</code>, 2 becomes <code>|</code>, 3 becomes space, and 4 becomes <code>#</code>.</p>
 </div>
-<div id="pu4" class="pu"><h1>Python 3, <s>110</s> <s>121</s> <s>119</s> 115 bytes</h1>
+<div id="pu5" class="pu"><h1>Python 3, <s>110</s> <s>121</s> <s>119</s> 115 bytes</h1>
 <p>(+11 bytes to handle user input, -6 bytes thanks to @noodle man!)</p>
 <p>Had a lot of fun with this one. I think there are probably some bytes that can be knocked off, but I am happy with it for now!</p>
 <pre class="lang-python prettyprint-override"><code>def f(n):
@@ -192,7 +211,7 @@ for x in m:                   ## Loop through binary digits
 +---+---+---+---+ +---+---+---+---+ +---+---+---+---+ +---+---+---+---+
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 31 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 31 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>b16jT„# ‡4äε€'|Ć&quot;+---&quot;17∍‚}€`Ć»
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f8/ydAsK@RRwzxlhUcNC00OLzm39VHTGvWaI21K2rq6ukqG5o86eh81zKoFiiYcaTu0@/9/EyMTIwA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/V9WqeSZV1BaYqWgZG/LpeRfWgLh6PxPMjTLCnnUME9Z4VHDQpPDS85tfdS0Rr3mSJuStq6urpKh@aOO3kcNs2qBoglH2g7t/q9zaJv9/2gTIxMjHWNjCyNTHUMdAx0zU1Nj01gA" rel="nofollow noreferrer">verify both test cases</a>.</p>
@@ -238,7 +257,7 @@ $               # Push 1 and the input
                 # (after which the result is output implicitly, with trailing newline)
 </code></pre>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 82 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 82 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=(x,i=16,h=`+---+---+---+---+
 `)=&gt;i?f(x/2,i-1)+&quot;| &quot;+&quot; #&quot;[x&amp;1]+(i%4?&quot; &quot;:` |
@@ -259,25 +278,6 @@ I.oninput();</code></pre>
 </div>
 </div>
 </p>
-</div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal" rel="nofollow noreferrer">Vyxal</a>, 31 bytes</h1>
-<pre><code>\+3-4*\|?b16∆Z\#*2↳ʁ+4ẇṠv&quot;fǏvǏ⁋
-</code></pre>
-<p><a href="https://vyxal.pythonanywhere.com/#WyIiLCIiLCJcXCszLTQqXFx8P2IxNuKIhlpcXCMqMuKGs8qBKzThuofhuaB2XCJmx492x4/igYsiLCIiLCI0MjQyIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
-<pre><code>        ?                       # Input
-         b                      # To binary
-          16∆Z                  # Pad to length 16 with 0s
-              \#*               # That many #s, for each bit
-                 2↳ʁ            # Pad to length 2 with spaces and mirror
-      \|            +           # Prepend | to each
-                     4ẇṠ        # Divide into rows and stringify each
-                        v&quot;f     # Interleave with...
-\+3-                            # &quot;+---&quot;
-    4*                          # Repeated four times
-                           Ǐ    # Append the first line
-                            vǏ  # For each line, append the firstt character
-                              ⁋ # Join the result by newlines
-</code></pre>
 </div>
 <div id="pu8" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-R</code></a>, <s>40</s> 36 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <p>This'll need another pass once I'm properly caffeinated!</p>
