--- a/q/275303.html
+++ b/q/275303.html
@@ -26,14 +26,31 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>079</td><td>JavaScript Node.js</td><td>240902T084009Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275304#275304">l4m2</a></td></tr>
-<tr d-ix="1"><td>nan</td><td>Ruby</td><td>240903T084423Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275317#275317">G B</a></td></tr>
-<tr d-ix="2"><td>128</td><td>Python 3</td><td>240903T025930Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275315#275315">Lucenapo</a></td></tr>
-<tr d-ix="3"><td>086</td><td>JavaScript ES6</td><td>240902T093424Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275307#275307">Arnauld</a></td></tr>
-<tr d-ix="4"><td>052</td><td>05AB1E</td><td>240902T153854Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275310#275310">Kevin Cr</a></td></tr>
-<tr d-ix="5"><td>069</td><td>Google Sheets</td><td>240902T100442Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275308#275308">doubleun</a></td></tr>
+<tr d-ix="0"><td>072</td><td>JavaScript + momentjs</td><td>240903T101110Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275318#275318">doubleun</a></td></tr>
+<tr d-ix="1"><td>079</td><td>JavaScript Node.js</td><td>240902T084009Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275304#275304">l4m2</a></td></tr>
+<tr d-ix="2"><td>nan</td><td>Ruby</td><td>240903T084423Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275317#275317">G B</a></td></tr>
+<tr d-ix="3"><td>128</td><td>Python 3</td><td>240903T025930Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275315#275315">Lucenapo</a></td></tr>
+<tr d-ix="4"><td>086</td><td>JavaScript ES6</td><td>240902T093424Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275307#275307">Arnauld</a></td></tr>
+<tr d-ix="5"><td>052</td><td>05AB1E</td><td>240902T153854Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275310#275310">Kevin Cr</a></td></tr>
+<tr d-ix="6"><td>069</td><td>Google Sheets</td><td>240902T100442Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275308#275308">doubleun</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 79 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript + <a href="https://momentjs.com/" rel="nofollow noreferrer">momentjs</a>, 72 bytes</h1>
+<pre><code>f=(a,b,c)=&gt;[[a,b,c],[c,a,b],[c,b,a]].map(r=&gt;m(20+r.join('-')).isValid())
+</code></pre>
+<p>Based on my <a href="https://codegolf.stackexchange.com/a/275308/119296">Google Sheets answer</a>. Requires an import. In <a href="https://developers.google.com/apps-script" rel="nofollow noreferrer">Apps Script</a>:</p>
+<pre><code>eval(UrlFetchApp.fetch('https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js').getContentText())
+m = moment
+</code></pre>
+<p>In browsers:</p>
+<pre><code>req = new XMLHttpRequest()
+req.open('GET', 'https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js', false)
+req.send()
+eval(req.responseText)
+m = moment
+</code></pre>
+<p>Sorry no TIA, don't know how to import <code>momentjs</code> there. Can probably be golfed more.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 79 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>s=&gt;[2,6,8].map(p=&gt;(new Date(4+[2,0,8].map(q=&gt;s[i=(p^q)%6]+s[i+1]))+0)[8]==s[i])
 </code></pre>
@@ -62,13 +79,13 @@
 </code></pre>
 <p><a href="https://tio.run/##fZZdbptAFIXfs4qRJcczMiGeO7Zr0uA8tRvIo@soxMGUihibwUhW064gUl/62O6j68kGugR3hqaVCT4DEiA@zv0ZzrX5FFWRXhTpujxb5ffxfhnudTidkTf2JnP/IVrzdTjlSbgJp1XY177e3umy4Hx9sxHdsUfi8TERt7eXUp1S0OfVGV2pm69VNziVFwkn0R1eSjFN@ESIfRFvtmkR885Sd4RfxNH9@zSLr3erBR8Iv8yvyyJdJVz4ep2lJe98WJnHlnnxLlp85CYrC6fs8wljWVyyGdMe830/YnMWMgNfROesfy4885DdilgbuORavDV3FvlK51nsZ3nCjdjA@uDHVVzsOK88lgqbomJhyHg0S@f2olMW27gjBLtivd@/vj3/@G6OPXbBes8/n3om8BexH9QbY8so03HzdFIjiVkQQCYdMaWNaUtjxxhhphw6RTifo05y1EmOOokmDmbyPUS7u2MxFc6nBi6Ga1HKxeC6SGlrOa6ThGMahmJKh5ekw0vS4SXZ8NJLSfb0F8nGvQYiiBRWHfT2Gh2U@AoRrpBwhYceaiGYS@FcCudSyoFgy8MDh7SQRKoRzjWCuRqOayGsgi9FHlmof5aSqi37z4ZYpyTWKfxTIoej8RvEggBanxzjRI5xIsc4ER4nwuNEeJwMQj4mPGmEJ43wpBGeNIKTJsnuGCmIgPtrhHOBviwCfdkikOlqJjFDhjRsiGMq6WI4Jja5bQ6ZznYHdQqb1Xbe1tVLFgT4M8IwQp8RQdB4rW0mHQz87dVMIQaX5Q8" rel="nofollow noreferrer">Modifying Arnauld's also result 88, with <code>maybe</code> be <code>false</code></a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>71</s> 61+4=65 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>71</s> 61+4=65 bytes</h1>
 
 <pre class="lang-ruby prettyprint-override"><code>-&gt;a,b,c{[a+b+c,c+a+b,c+b+a].map{|x|!!Date.parse(x)rescue !0}}
 </code></pre>
 <p><a href="https://tio.run/##fZbrbptAEIX/9ymwVEWmEOyZsdvQlPzqWxBULRhLkeIbENVR8KuX7JKkMsFnjOSV@DhzWc7YWz3lz9066a7vTJiHxUtqgjwowiKwq/3OA5NFG7N/aY/tZPLbNGW0N1VdTo9@VdbFU@lN5qdT9/VX9PiwLeuPR/tY4So5RnVhttPZ/Spo02a9ye7/BjP/9pCs02/mnUXRzM9uD046vfrZ7P7UfpKkvT7z2tbbT1MTeoPH36KHh8w/dfP@43lr81iXw@VLjwizOIaMlJjkYjaVbf4SY8xE0QnjfEqdrNTJSp3MNwqz@TbmOb8UU3A@mWsM1yKiMbgvRK6WyzpiHNMyFJMUL5HiJVK8RAMvvZfkljdEg3sDxBAJVp319hmdlfgJMa6QcYXnHhohmEtwLsG5RBQEW16cOWSECKmWONcS5ho4boSwCr4UurBRH5YiGcv@swXWCWGd4J8SWiy//0AsjqH1WRknVsaJlXFiPE6Mx4nxOFmEfMx40hhPGuNJYzxpDCeN2F0YCUTA/T3CuUBfDoG@XBHIdD0jzJAhLVvgmEIawzGxyV1zyHSuO6gTbFbX@VjXb1kc42OEZYyOEXE8eK1jRgoDf3s9E8Twtvzb7ZuH3bburquVPRm@Ag" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 128 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 128 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda y,m,d:(0&lt;m&lt;13)*(0&lt;d&lt;(62648012&gt;&gt;2*m&amp;3)+29or((y%4,m,d)==(0,2,29))*(2-0**y)/2)
 g=lambda y,m,d:(f(y,m,d),f(d,y,m),f(d,m,y))
@@ -76,7 +93,7 @@ g=lambda y,m,d:(f(y,m,d),f(d,y,m),f(d,m,y))
 <p><a href="https://tio.run/##bZBBbsMgFET3nIJNKyCkBexGjWOy7CUsL2iB1FIxFiZSOb2LXbJoVNiM5s0ffZhS/PRjtSxWfin3rhVM1FHdINa6lleYZKFbdBCH@pVxcT4L4h4rvBNHHxBKD/WaxlIiRgUVR5wHxJ4RkvCzwOByV2rRJjC1SNMsf4WjCePFBu@gVtHEwRk4uMmHSIA2Fr6VqQbAfGJIzRor5imYeA0j5Bs03x9mik3xGLDi7wYdo08vlOXL@26@OpS7d4pwxrYy6wNUcBg7nl9T0brHPVi9lD0Y1HgxKEfLIitw/4Eb1HdQzbMJEd4@QUorilx@AA" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 <p><code>f</code> returns <code>1</code> if <code>y,m,d</code> is valid, <code>0</code> if <code>y,m,d</code> is invalid and <code>0.5</code> if <code>y,m,d</code> is maybe valid.</p>
 </div>
-<div id="pu3" class="pu"><h1>JavaScript (ES6), 86 bytes</h1>
+<div id="pu4" class="pu"><h1>JavaScript (ES6), 86 bytes</h1>
 <p><em>A mix of my previous answer with <a href="https://codegolf.stackexchange.com/a/275304/58563">@l4m2's answer</a>.</em></p>
 <p>Expects a string of 6 digits.</p>
 <p>Returns a triplet <code>[YYMMDD, MMDDYY, DDMMYY]</code> of Boolean values (<em>true</em> for <em>valid</em>). Returns <em>valid</em> for the <em>&quot;maybe&quot;</em> cases.</p>
@@ -188,7 +205,7 @@ g=lambda y,m,d:(f(y,m,d),f(d,y,m),f(d,m,y))
 )                  // end of map()
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 52 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 52 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>11Ýε7%É31αyΘ-LтL&lt;ây&gt;δšʒ`4Ör&lt;s29QP≠]€`T‰JD2δ.IDí)JQ€à
 </code></pre>
 <p><a href="https://tio.run/##AVoApf9vc2FiaWX//zExw53OtTclw4kzMc6xec6YLUzRgkw8w6J5Ps60xaHKkmA0w5ZyPHMyOVFQ4omgXVTigLBK4oKsYEQyzrQuSUTDrSlKUeKCrMOg//8xMjEyMzE" rel="nofollow noreferrer">Try it online.</a> (No test suite, since it's too slow to run more than 2-3 test cases at once.</p>
@@ -249,7 +266,7 @@ T‰            # Divmod each inner-most value by 10
               # (after which the resulting triplet is output implicitly)
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1>Google Sheets, 69 bytes</h1>
+<div id="pu6" class="pu"><h1>Google Sheets, 69 bytes</h1>
 <pre><code>=bycol({A3,C3,C3;B3,A3,B3;C3,B3,A3},lambda(_,isdate(20&amp;join(&quot;-&quot;,_))))
 </code></pre>
 <p>Put the three date components in cells <code>A3:C3</code> as in <code>24</code>, <code>12</code>, <code>31</code> and the formula in cell <code>H3</code>.</p>
